# letso

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: docker.yml  release-assets.yml  rust.yml
container/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  example.env
docs/: contributing.md
server/: Cargo.toml
server/src/: api.rs  app_state.rs  args.rs  errors.rs  main.rs
shlib/: Cargo.toml
shlib/src/: cache.rs  errors.rs  hash.rs  lib.rs  native_fs.rs  portable_directory.rs  portable_file.rs  portable_path.rs  relative_fs.rs  test_utils.rs
ui/: README.md  build.yaml  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/letso/: MainActivity.kt
ui/ios/: Podfile
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: api.dart  app_info_widget.dart  app_state.dart  browser_container.dart  data.dart  data.g.dart  file_browser.dart  licenses_widget.dart  log_viewer.dart  logger_manager.dart  main.dart  oss_licenses.dart  platform.dart  platform_native.dart  platform_web.dart  preferences.dart  settings.dart  settings_page.dart  status_bar.dart  sync_status.dart  synced_directory_setting.dart  upload_manager.dart  utils.dart
ui/lib/platform/: native.dart  none.dart  platform_abstracts.dart  web.dart
ui/lib/platform/native/: log_output.dart  sync_manager.dart
ui/lib/platform/web/: sync_manager.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/macos/Runner/: DebugProfile.entitlements
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
