[workspace]
edition = "2024"
members = ["server"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
async-walkdir = "2.1.0"
chrono = "0.4.41"
env_logger = "0.11.8"
futures-lite = "2.6.1"
futures-util = "0.3.31"
log = "0.4.27"
pfs = { git = "https://github.com/vauradkar/pfs.git", features = ["poem"] }
poem = { version = "3.1.12", features = ["static-files"] }
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tempdir = "0.3.7"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"

[workspace.lints.rust]
missing_docs = { level = "warn" }
rust-2024-compatibility = { level = "warn" }
unsafe_code = { level = "warn" }
