[package]
edition.workspace = true
name = "server"
version.workspace = true

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
shlib = { path = "../shlib" }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
