[package]
edition.workspace = true
name = "server"
version.workspace = true

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
pfs = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
pfs = { workspace = true, features = ["test_utils"] }
poem = { workspace = true, features = ["test"] }
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
serde_json = { workspace = true }
tempdir = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
