[package]
edition.workspace = true
name = "shlib"
version.workspace = true

[dependencies]
async-walkdir = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
futures-lite = { workspace = true }
log = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }

[lints]
workspace = true
